examples/k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: caddy-outline-ss
spec:
  selector:
    matchLabels:
      app: caddy-outline-ss
  serviceName: caddy-outline-ss
  template:
    metadata:
      labels:
        app: caddy-outline-ss
    spec:
      containers:
        - name: caddy-outline-ss-scratch
          image: ghcr.io/joooostb/caddy-outline-ss-scratch:latest
          livenessProbe:
            tcpSocket:
              port: 443
            initialDelaySeconds: 60
          ports:
            - containerPort: 443
              name: https
          volumeMounts:
            - mountPath: /opt/xcaddy/config.yaml
              subPath: config.yaml
              name: config
            - mountPath: /opt/xcaddy/.local
              name: state
      volumes:
        - name: config
          configMap:
            name: caddy-outline-ss-config
  volumeClaimTemplates:
    - metadata:
        name: state
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
