examples/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy-outline-ss
spec:
  selector:
    app: caddy-outline-ss
  ports:
    - port: 443
      targetPort: https
